[package]
name = "people_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = "0.7.7"
chrono = { version = "0.4.26", features = ["serde"] }
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "postgres", "chrono", "json"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
